// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditForm> renders a form with the "Change password" button 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="firstname"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            First Name
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              class="input"
              id="ca0e00a9-e8fe-42de-bc30-3aea61471ad8"
              name="firstname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="lastname"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            Last Name
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              class="input"
              id="cf7ff9c8-91fe-4426-be82-d85c90b18261"
              name="lastname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="email"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            Email address
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              class="input"
              id="54082337-1005-4852-9051-97bb1177aca4"
              name="email"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="password"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            Password
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 1;"
        >
          <span
            class="input"
          >
            <input
              autocomplete="current-password"
              class="input"
              id="76735f16-8514-4bdf-b2d9-ec1be05edd5f"
              name="password"
              type="password"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          >
            <button
              type="button"
            >
              <span
                class="content"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                  />
                  <line
                    x1="1"
                    x2="23"
                    y1="1"
                    y2="23"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="changePasswordButtonContainer"
    >
      <button
        class="changePasswordButton"
        classes="[object Object]"
        type="button"
      >
        <span>
          Change Password
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<EditForm> renders a form without the "Change password" button 1`] = `
<DocumentFragment>
  <div
    class="root"
  >
    <div
      class="firstname"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            First Name
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              class="input"
              id="cef7bff0-cb53-40ad-b5b9-3ff1aec0a35b"
              name="firstname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="lastname"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            Last Name
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              class="input"
              id="aa11ca78-8b0a-4828-b4af-ceb95f7486b4"
              name="lastname"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="email"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            Email address
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 0;"
        >
          <span
            class="input"
          >
            <input
              class="input"
              id="e4577f21-512b-4a24-b1fd-f1e820a720d5"
              name="email"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          />
        </span>
        <p
          class="root"
        />
      </div>
    </div>
    <div
      class="password"
    >
      <div
        class="root"
      >
        <label>
          <span
            class="label"
          >
            Current Password
          </span>
        </label>
        <span
          class="root"
          style="--iconsBefore: 0; --iconsAfter: 1;"
        >
          <span
            class="input"
          >
            <input
              autocomplete="current-password"
              class="input"
              id="b894da84-1dc2-4754-8be5-db96da2128a2"
              name="password"
              type="password"
              value=""
            />
          </span>
          <span
            class="before"
          />
          <span
            class="after"
          >
            <button
              type="button"
            >
              <span
                class="content"
              >
                <svg
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                  />
                  <line
                    x1="1"
                    x2="23"
                    y1="1"
                    y2="23"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
        <p
          class="root"
        />
      </div>
    </div>
  </div>
  <div
    class="newPassword"
  >
    <div
      class="root"
    >
      <label>
        <span
          class="label"
        >
          New Password
        </span>
      </label>
      <span
        class="root"
        style="--iconsBefore: 0; --iconsAfter: 1;"
      >
        <span
          class="input"
        >
          <input
            class="input"
            id="d50041bf-0cf6-4d9b-b22d-f835bff0a07b"
            name="newPassword"
            type="password"
            value=""
          />
        </span>
        <span
          class="before"
        />
        <span
          class="after"
        >
          <button
            type="button"
          >
            <span
              class="content"
            >
              <svg
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"
                />
                <line
                  x1="1"
                  x2="23"
                  y1="1"
                  y2="23"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
      <p
        class="root"
      />
    </div>
  </div>
</DocumentFragment>
`;
